--- a/signup.html
+++ b/signup.html
@@ -20,12 +20,12 @@
 
 
 .fa-facebook {
-  background: #3B5998;
+  background: #f8f8fa;
   color: white;
 }
 
 .fa-twitter {
-  background: #55ACEE;
+  background: \#fcfdfd;
   color: white;
 }
 
